<resources>
    <string name="app_name">JWS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="msg_no_internet">No internet connection.</string>


    <string name="menu_login">Login</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_my_address">My Addresses</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>

    <string name="enter_mob_num">Enter mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_email_or_phone">Enter email or phone number</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_email_or_phone">Enter valid email address or phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_confirm_password_message">Password should be same</string>
    <string name="enter_state">Select state</string>
    <string name="enter_city">Select city</string>
    <string name="enter_postal_code">Enter postal code</string>

    <string name="enter_mob_email">Enter mobile number</string>
    <string name="add">ADD</string>
    <string name="best_of_everyday_essentials">Best of Everyday Essentials</string>
    <string name="minus">-</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="description">Description:</string>
    <string name="guest">Guest User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_product_in_cart">No products in your cart!</string>
    <string name="place_order">Place Order</string>
    <string name="login_to_place_order">Login to Place Order</string>
    <string name="m_r_p">M.R.P.</string>
    <string name="products_discount">Products Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total_price">Total Price</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="cash_on_delivery_cod">Cash On Delivery (COD)</string>
    <string name="online_payment_currently_unavailable">Online Payment (Currently unavailable)</string>
    <string name="your_order_has_been_successfully_placed_you_can_view_your_order_history_and_status_in_my_orders">Your order has been successfully placed, you can view your order history and status in \"My Orders\".</string>
    <string name="go_to_homepage">Go to Homepage</string>
    <string name="you_don_t_place_any_order_yet">You don\'t place any order yet.</string>
    <string name="search_for_products">Search for products</string>
    <string name="no_result_found">No result found!</string>
    <string name="gst_charges">GST Charges</string>
</resources>
