<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_my_profile" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_my_orders" />

        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_my_cart" />

    <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />

    </group>
</menu>
