<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/imgBack"
                    android:layout_toRightOf="@+id/imgBack"
                    android:ellipsize="end"
                    android:fontFamily="@font/whitney_semibold_bas"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/select_payment_option"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp" />

            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/txtCOD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_negative_regular"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:text="@string/cash_on_delivery_cod"
            android:textColor="@color/colorBlackMat"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_negative_regular"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            android:text="@string/online_payment_currently_unavailable"
            android:textColor="@color/colorBlackMatVeryLight"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/colorGrayDark" />


    </LinearLayout>

    <include
        android:id="@+id/progressLayout"
        android:visibility="gone"
        layout="@layout/layout_progress_bar_with_text" />

</RelativeLayout>