<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".fragment.CartFragment">

    <LinearLayout
        android:id="@+id/relTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_products"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txtMRPTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="@string/m_r_p"
                    android:textColor="@color/colorBlackMat"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtMRP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="₹123"
                    android:textColor="@color/colorBlackMat"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txtGstChargesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="@string/gst_charges"
                    android:textColor="@color/colorBlackMat"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtGstCharges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="₹0"
                    android:textColor="@color/colorBlackMat"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txtProductDiscountTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="@string/products_discount"
                    android:textColor="@color/colorBlackMat"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtProductDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="₹0"
                    android:textColor="@color/colorGreen"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txtDeliveryChangesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="@string/delivery_charges"
                    android:textColor="@color/colorBlackMat"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txtDeliveryChanges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="₹0"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txtTotalPriceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="@string/total_price"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/txtTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/signika_negative_semibold"
                    android:singleLine="true"
                    android:text="₹0"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13sdp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relPlaceOrder"
        android:layout_below="@+id/relTopLayout"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_item_cart" />

    <LinearLayout
        android:id="@+id/linNoItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_120sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/signika_negative_regular"
            android:gravity="center"
            android:text="@string/no_product_in_cart"
            android:textColor="@color/colorBlackMatLight"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/relPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPlaceOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/signika_negative_bold"
            android:text="@string/place_order"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/imgNext"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:src="@drawable/ic_place_cart"
            android:tint="@color/colorWhite" />
    </LinearLayout>

</RelativeLayout>